2007-??-??: 1.11
	changed StringBuf.add implementation
	added haxe.Firebug
	allowed variable return type for overriden/implemented methods

2007-01-01: 1.10
	fix in haxe.remoting.SocketConnection.readAnswer
	fix in postfix incr/decr and getter/setter
	added haxe.Http.fileTransfert for Neko
	fixed haxelib to 1.02 (use multipart file transfert)
	fixed Array.reverse
	added flash.Lib.getURL and fscommand for Flash9
	fixed some ignored parse errors
	fixed minor syntax : immediate object access
	allow extend/implements a typedef
	fixed Flash9 AMF remoting
	fixed Flash9 bugs in Date object
	fixed dynamic Array typing bug
	allowed typedef private field access
	added Class<T> base class type
	AsyncConnection.call callback is now optional
	fixed if/switch with no else/default compilation
	moved Reflect.createInstance to Type
	added Reflect.makeVarArgs
	haXelib 1.03 : several developers per project + web interface

2006-11-22: 1.09
	added neko.vm.Module and neko.vm.Loader
	haxelib : allowed spaces in "run" arguments
	allowed Thread comparison
	fixed bug in SWF6 compilation
	allowed either Mysql or Mysql5 usage
	replaced db.Connection.hasFeature by db.Connection.dbName
	added Socket.custom field
	moved neko.Thread to neko.vm.Thread
	define haxe_109 (for api changes)
	fixes in haxe.remoting.Connection and haxe.Unserializer for F9 
	added haxe.remoting.Connection.urlConnect for JS
	allowed private typedef fields
	added neko.net.ThreadServer, ThreadRemotingServer and Poll
	removed neko.net.RemotingBuffer
	relaxed enums switchs (allow value in first case)
	changed "cast" codegeneration (fix some F9 usages)
	change in POST data handling in mod_neko (max 256K, except multipart)
	added neko.Web.getClientHeaders and neko.Web.flush
	"callback" is now a keyword
	fixed stack overflow when typedef = Dynamic
	fixed Reflect.createInstance on F9
	Array : slice optional length, fixed neko slice & splice
	+ fixed cast return type

2006-10-29: 1.08
	fixed bug in flash -debug